--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		#keywords{
 			width: 400px;		
 			text-align: center;
-		    background-image: url("https://i.pinimg.com/originals/2a/d4/8e/2ad48e1d2c6402b2471e2f470a72d235.jpg");
+		    background-image: url("http://www.publicdomainpictures.net/pictures/30000/velka/plain-white-background.jpg");
 		    background-repeat: repeat-y;
 		}
 		p {
