--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		}
 		#keywords{
 			width: 400px;		
-			text-align: center;
+			text-align: left;
 		    background-image: url("http://www.publicdomainpictures.net/pictures/30000/velka/plain-white-background.jpg");
 		    background-repeat: repeat-y;
 		}
