--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 			font-family: "Courier New", Courier, monospace;
 		}
 		#pic{
-			width: 100px;
+			width: 200px;
 			height: 400px;
 			margin: auto;
 		}
 		#keywords{
-			width: 100px;		
-			text-align: left;
+			width: 200px;		
+			text-align: auto;
 		    background-image: url("http://www.publicdomainpictures.net/pictures/30000/velka/plain-white-background.jpg");
 		    background-repeat: repeat-y;
 		}
