--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			background: rgba(255,255,255, 0.5);
 			padding: 0;
 			margin: 0;
+			font-family: "Roboto", Courier, monospace;
 		}
 		#pic{
 			width: 300px;
