--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@
 			font-size: 12px;
 			text-transform: lowercase;
 		}
+		#keywords{
+			font-size: 12px;
+			text-transform: lowercase;
+			font-family: "Roboto", Courier, monospace;
+		}		
 	</style>
 </head>
 <body>
 <div id="keywords">
 	<center><p id="tag">SUPREME KEYWORDS 31/08/17</p></center>
-	<div id='keyword'><p><b>Keyword:</b> Arc Track Jacket<br>
+	<div id='keyword'>
+<p><b>Keyword:</b> Arc Track Jacket<br>
 <b>Colors:</b><br>
 Magenta : Ejzyf9 1p3e<br>
 Black : S8yumegmi6i<br>
