--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 		#keyword{
 			font-size: 12px;
 		}
+		#keyword p{
+			font-size: 12px;
+		}
+		#keyword br{
+			font-size: 12px;
+		}
 	</style>
 </head>
 <body>
