--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 <div id="keywords">
-	<p id="tag">supreme keywords week 1 (8/24/17)</p>
+	<p id="tag">SUPREME KEYWORDS 31/08/17</p>
 	<div id='keyword'><p><b>Keyword:</b> Arc Track Jacket<br>
 <b>Colors:</b><br>
 Magenta : Ejzyf9 1p3e<br>
