--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			font-size: 16px;
 			word-break: initial;
 		}
-		#tag{
+		#k1 {
 		text-align: center;		
 		}
 		#keyword{
@@ -42,7 +42,7 @@
 </head>
 <body>
 <div id="keywords">
-	<p id="tag">SUPREME KEYWORDS 31/08/17</p>
+	<div id="k1">SUPREME KEYWORDS 31/08/17</div>
 <div id='keyword'><p><b>Keyword:</b> Arc Track Jacket<br>
 <b>Colors:</b><br>
 Magenta : Ejzyf9 1p3e<br>
