--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
 			font-size: 16px;
 			word-break: initial;
 		}
-		#k1 {
-		text-align: center;		
-		}
 		#keyword{
 			font-size: 12px;
 		}
@@ -42,7 +39,7 @@
 </head>
 <body>
 <div id="keywords">
-	<div id="k1">SUPREME KEYWORDS 31/08/17</div>
+	<center><div id="k1">SUPREME KEYWORDS 31/08/17</div></center>
 <div id='keyword'><p><b>Keyword:</b> Arc Track Jacket<br>
 <b>Colors:</b><br>
 Magenta : Ejzyf9 1p3e<br>
