--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Keywords | Heated Sneaks</title>
+	<title>ZUPREME KEYWORDS</title>
 	<style>
 		body {
 			background: rgba(255,255,255, 0.5);
