--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			background: rgba(255,255,255, 0.5);
 			padding: 0;
 			margin: 0;
-			font-family: "Courier New", Courier, monospace;
+			font-family: "Roboto", Courier, monospace;
 		}
 		#pic{
 			width: 300px;
@@ -17,13 +17,13 @@
 			margin: auto;
 		}
 		#keywords{
-			width: 300px;		
+		    width: 300px;
+		    text-transform: lowercase;
 		    background-image: url("logo.png");
 		    background-repeat: repeat-y;
 		}
 		p {
 			font-size: 16px;
-			text-transform: lowercase;
 			word-break: initial;
 		}
 		#tag {
