--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			background: rgba(255,255,255, 0.5);
 			padding: 0;
 			margin: 0;
+			text-align: center;
 			font-family: "Roboto", Courier, monospace;
 		}
 		#pic{
