--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <p id="title">ZUPREME KEYWORDS 31/08/17</p>
 
 <div class="dropdown">
-  <img src="https://instagram.flhr4-2.fna.fbcdn.net/t51.2885-15/e35/21107901_1998567650374673_1949099606813966336_n.jpg" alt="Trolltunga Norway" width="100" height="100">
+  <img src="DROP.jpg" width="100" height="100">
   <div class="dropdown-content">
     <img src="https://instagram.flhr4-2.fna.fbcdn.net/t51.2885-15/e35/21107901_1998567650374673_1949099606813966336_n.jpg" alt="Trolltunga Norway" width="300" height="300">
     <div class="desc">Preview Droplist 31/08/17</div>
