--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
 			font-size: 12px;
 		}
 	</style>
+	
 	<style>
 .dropdown {
     position: relative;
-    display: inline-block;
+    text-align: center;
 }
 
 .dropdown-content {
