--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 	<style>
 .dropdown {
     position: relative;
-    text-align: center;
+    display: inline-block;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .dropdown-content {
@@ -78,7 +80,12 @@
 </div>
 	
 <div id="keywords">
-	<div id='keyword'><p>name: <i>Arc Track Jacket</i></p><p>keyword: <i>arc</i></p><p>color: <a>black, magenta, navy, white</a></p><p>category: <i>jackets</i></p><p>prices: <i>$158</i></p></div><br>
+	<div id='keyword'>
+		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
+		<p>color: <a>black, magenta, navy, white</a></p>
+		<p>category: <i>jackets</i></p>
+		<p>prices: <i>$158</i></p>
+	</div><br>
 	</div>
 </body>
 </html>
