--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	<style>
 .dropdown {
     position: relative;
+    text-align: center;
     display: inline-block;
     left: 50%;
     transform: translateX(-50%);
