--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .desc {
