--- a/index.html
+++ b/index.html
@@ -85,6 +85,37 @@
 		<p>category: <i>jackets</i></p>
 		<p>prices: <i>$158</i></p>
 	</div><br>
-	</div>
+	<div id='keyword'>
+		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
+		<p>color: <a>black, magenta, navy, white</a></p>
+		<p>category: <i>jackets</i></p>
+		<p>prices: <i>$158</i></p>
+	</div><br>
+	<div id='keyword'>
+		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
+		<p>color: <a>black, magenta, navy, white</a></p>
+		<p>category: <i>jackets</i></p>
+		<p>prices: <i>$158</i></p>
+	</div><br>
+	<div id='keyword'>
+		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
+		<p>color: <a>black, magenta, navy, white</a></p>
+		<p>category: <i>jackets</i></p>
+		<p>prices: <i>$158</i></p>
+	</div><br>
+	<div id='keyword'>
+		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
+		<p>color: <a>black, magenta, navy, white</a></p>
+		<p>category: <i>jackets</i></p>
+		<p>prices: <i>$158</i></p>
+	</div><br>
+	<div id='keyword'>
+		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
+		<p>color: <a>black, magenta, navy, white</a></p>
+		<p>category: <i>jackets</i></p>
+		<p>prices: <i>$158</i></p>
+	</div><br>
+
+</div>
 </body>
 </html>
