--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Keywords | Heated Sneaks</title>
+	<title>ZUPREME KEYWORDS</title>
 	<style>
 		body {
 			background: rgba(255,255,255, 0.5);
@@ -79,6 +79,7 @@
 </div>
 	
 <div id="keywords">
+	*All item names highlighted as <b>bold</b> are the recommended keywords for the drop.
 	<div id='keyword'>
 		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
 		<p>color: <a>black, magenta, navy, white</a></p>
