--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 </div>
 	
 <div id="keywords">
+	<div id='keyword'>
 	*All item names highlighted as <b>bold</b> are the recommended keywords for the drop.
+	</div>
 	<div id='keyword'>
 		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
 		<p>color: <a>black, magenta, navy, white</a></p>
