--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	
 <div id="keywords">
 	<div id='keyword'>
-	*All item names highlighted as <b>bold</b> are the recommended keywords for the drop.
+	<p>*All item names highlighted as <b>bold</b> are the recommended keywords for the drop.</p>
 	</div>
 	<div id='keyword'>
 		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
