--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
 		#keyword p{
 			font-size: 13px;
 		}
-		#keyword i{
-			font-size: 13px;
-		}
 		#keyword a{
 			font-size: 13px;
 		}
@@ -83,40 +80,40 @@
 	<p>*All item names highlighted as <b>bold</b> are the recommended keywords for the drop.</p>
 	</div>
 	<div id='keyword'>
-		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
-		<p>color: <a>black, magenta, navy, white</a></p>
-		<p>category: <i>jackets</i></p>
-		<p>prices: <i>$158</i></p>
+		<p>Keyword: <b>Arc Track Jacket</p></b>
+		<p>color: black, magenta, navy, white</p>
+		<p>category: jackets</p>
+		<p>prices: $158</p>
 	</div><br>
 	<div id='keyword'>
-		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
-		<p>color: <a>black, magenta, navy, white</a></p>
-		<p>category: <i>jackets</i></p>
-		<p>prices: <i>$158</i></p>
+		<p>Keyword: <b>Arc Track Jacket</p></b>
+		<p>color: black, magenta, navy, white</p>
+		<p>category: jackets</p>
+		<p>prices: $158</p>
 	</div><br>
 	<div id='keyword'>
-		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
-		<p>color: <a>black, magenta, navy, white</a></p>
-		<p>category: <i>jackets</i></p>
-		<p>prices: <i>$158</i></p>
+		<p>Keyword: <b>Arc Track Jacket</p></b>
+		<p>color: black, magenta, navy, white</p>
+		<p>category: jackets</p>
+		<p>prices: $158</p>
 	</div><br>
 	<div id='keyword'>
-		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
-		<p>color: <a>black, magenta, navy, white</a></p>
-		<p>category: <i>jackets</i></p>
-		<p>prices: <i>$158</i></p>
+		<p>Keyword: <b>Arc Track Jacket</p></b>
+		<p>color: black, magenta, navy, white</p>
+		<p>category: jackets</p>
+		<p>prices: $158</p>
 	</div><br>
 	<div id='keyword'>
-		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
-		<p>color: <a>black, magenta, navy, white</a></p>
-		<p>category: <i>jackets</i></p>
-		<p>prices: <i>$158</i></p>
+		<p>Keyword: <b>Arc Track Jacket</p></b>
+		<p>color: black, magenta, navy, white</p>
+		<p>category: jackets</p>
+		<p>prices: $158</p>
 	</div><br>
 	<div id='keyword'>
-		<p>Keyword: <b><i>Arc Track Jacket</i></p></b>
-		<p>color: <a>black, magenta, navy, white</a></p>
-		<p>category: <i>jackets</i></p>
-		<p>prices: <i>$158</i></p>
+		<p>Keyword: <b>Arc Track Jacket</p></b>
+		<p>color: black, magenta, navy, white</p>
+		<p>category: jackets</p>
+		<p>prices: $158</p>
 	</div><br>
 
 </div>
