--- a/info.html
+++ b/info.html
@@ -15,7 +15,7 @@
 <p>Always have your credit card number copied to clipboard.</p>
 <p>If the site has updated, you can manually take over the bot!</p>
 
-<span class="collapseomatic " id="id3425"  tabindex="0" title="<strong>Common Supreme </strong><b>Errors</b>"    ><strong>Common Supreme </strong><b>Errors</b><div id="target-id3425" class="collapseomatic_content"> <p><strong>Please Wait Error: </strong><br /> This is a fairly new issue that has come up on supreme, after hitting complete payment button on checkout the button will hang on &#8220;please wait&#8221; and will not continue further. This leads us to believe it is an error with supreme&#8217;s payment processor, or server issue. If you get stuck here do no lose hope as many still get confirmation emails shortly after.</p> <p><strong>Card Declined Error:</strong><br /> This can mean item has sold out before payment could be processed by supreme.</p></div>
+<span class="collapseomatic " id="id3425"  tabindex="0" title="<strong>Common Supreme </strong><b>Errors</b>"    ><strong>Common Supreme </strong><b>Errors</b><div id="target-id3425" class="collapseomatic_content"> <p><strong>Please Wait Error: </strong>This is a fairly new issue that has come up on supreme, after hitting complete payment button on checkout the button will hang on &#8220;please wait&#8221; and will not continue further. This leads us to believe it is an error with supreme&#8217;s payment processor, or server issue. If you get stuck here do no lose hope as many still get confirmation emails shortly after.</p> <p><strong>Card Declined Error:</strong>This can mean item has sold out before payment could be processed by supreme.</p></div>
 
 
 <p><strong>Keywords may change so be sure to check back before the drop.</strong></p>
