--- a/info.html
+++ b/info.html
@@ -15,8 +15,8 @@
 <p>Always have your credit card number copied to clipboard.</p>
 <p>If the site has updated, you can manually take over the bot!</p>
 
-<span class="collapseomatic colomat-close colomat-visited" id="id8753" tabindex="0" title="<strong>Common Supreme </strong><b>Errors</b>"><strong>Common Supreme </strong><b>Errors</b></span>
-<div id="target-id8753" class="collapseomatic_content" style=""> <p><strong>Please Wait Error:&nbsp;</strong><br> This is a fairly new issue that has come up on supreme, after hitting complete payment button on checkout the button will hang on “please wait” and will not continue further. This leads us to believe it is an error with supreme’s payment processor, or server issue. If you get stuck here do no lose hope as many still get confirmation emails shortly after.</p> <p><strong>Card Declined Error:</strong><br> This can mean item has sold out before payment could be processed by supreme.</p></div>
+<span class="collapseomatic colomat-visited" id="id8753" tabindex="0" title="<strong>Common Supreme </strong><b>Errors</b>"><strong>Common Supreme </strong><b>Errors</b></span>
+<div id="target-id8753" class="collapseomatic_content" style="display: none;"> <p><strong>Please Wait Error:&nbsp;</strong><br> This is a fairly new issue that has come up on supreme, after hitting complete payment button on checkout the button will hang on “please wait” and will not continue further. This leads us to believe it is an error with supreme’s payment processor, or server issue. If you get stuck here do no lose hope as many still get confirmation emails shortly after.</p> <p><strong>Card Declined Error:</strong><br> This can mean item has sold out before payment could be processed by supreme.</p></div>
 
 
 <p><strong>Keywords may change so be sure to check back before the drop.</strong></p>
